# ozonDataHandel

./: .gitignore  CreateFinance.py  CreateStockFill.py  config.ini  feishu_records.json  import_ozon_accruals_polars_fast.py  import_ozon_orders_polars.py  ximport_ozon_accruals_polars.py  xximport_ozon_orders.py  xximport_ozon_orders_polars.py  xximport_ozon_orders_polars_fast.py
Campagin/: genCampagintoken.py  orderpayCampagin.py  test.py
Feishu/: .tenant_token_cache.json  config.toml  feishu.py  tenant_token_cache_script.py
Finance/: Logisticscost1.py  Logisticscosts.py  genSizefapi.py
Orders/: available_days_df.json  calculate_daily_weight_polars.py  orderDailyGrouped.py  ozon_stock_purchase.json  stock_orders.py  summarize_order_info_windows_polars.py  summarize_peak_daily_sales_polars.py  xxsummarize_order_info_polars.py  xxxsummarize_max_sales_polars.py
Stocks/: fboInventory.py  warehose2cluster.py
ads/: aggregate_ads_by_date.py  aggregator.py  finance_feishu_records.json
mongo_ads_aggregator/: README.md  pyproject.toml  requirements.txt
mongo_ads_aggregator/mongo_ads_aggregator/: __init__.py  __main__.py  aggregator.py
mongo_ads_aggregator/scripts/: example.py
mongo_pivot_iferror_global_fixdiv3_repack/: .env  BUG_FIX_SUMMARY.md  CSV_UPLOAD_FIX_SUMMARY.md
mongo_pivot_iferror_global_fixdiv3_repack_filter/: docker-compose.yml
mongo_pivot_iferror_global_fixdiv3_repack_filter_1/: .env  .env.example  CSV_COLUMN_RECOGNITION_FIX.md
ozon_ads_pipeline_full/: .env  README.md  main.py  main_products.py  main_products_range.py  requirements.txt  test.py
(+38 files in other folders)
